cmake_minimum_required(VERSION 3.2)
project(wxWidgetsExamples)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory("src/Application")
add_subdirectory("src/CommonControls")
add_subdirectory("src/PickerControls")
add_subdirectory("src/OtherControls")
add_subdirectory("src/CustomControls")
add_subdirectory("src/Components")
add_subdirectory("src/Containers")
add_subdirectory("src/BookControls")
add_subdirectory("src/CommonDialogs")
add_subdirectory("src/OtherDialogs")
add_subdirectory("src/CustomDialogs")
add_subdirectory("src/Events")
add_subdirectory("src/HelloWorld")
add_subdirectory("src/MenusAndToolbars")
add_subdirectory("src/Others")
add_subdirectory("src/Painting")
add_subdirectory("src/Tests")
