cmake_minimum_required(VERSION 3.2)
project(wxWidgetsExamples)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory(src/HelloWorlds)
add_subdirectory(src/Applications)
add_subdirectory(src/Dialogs)
add_subdirectory(src/Frames)
add_subdirectory(src/MenusAndToolbars)
add_subdirectory(src/Containers)
add_subdirectory(src/Controls)
add_subdirectory(src/BookControls)
add_subdirectory(src/PickerControls)
add_subdirectory(src/Components)
add_subdirectory(src/Printing)
add_subdirectory(src/Events)
add_subdirectory(src/Painting)
add_subdirectory(src/WindowDocking)
add_subdirectory(src/OpenGL)
add_subdirectory(src/UserControls)
add_subdirectory(src/UserDialogs)
add_subdirectory(src/Others)
add_subdirectory(src/Tests)
