cmake_minimum_required(VERSION 3.5)
project(src)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory(HelloWorlds)
add_subdirectory(Applications)
add_subdirectory(Dialogs)
add_subdirectory(Frames)
add_subdirectory(MenusAndToolbars)
add_subdirectory(Containers)
add_subdirectory(Controls)
add_subdirectory(BookControls)
add_subdirectory(PickerControls)
add_subdirectory(Components)
add_subdirectory(Printing)
add_subdirectory(Events)
add_subdirectory(Painting)
add_subdirectory(WindowDocking)
add_subdirectory(OpenGL)
add_subdirectory(UserControls)
add_subdirectory(UserDialogs)
add_subdirectory(Others)
add_subdirectory(Tests)
