cmake_minimum_required(VERSION 3.2)
project(CommonControls)

add_subdirectory("Button")
add_subdirectory("CheckBox")
add_subdirectory("CheckedListBox")
add_subdirectory("ComboBox")
add_subdirectory("Control")
add_subdirectory("DateTimePicker")
add_subdirectory("DomainUpDown")
add_subdirectory("HScrollBar")
add_subdirectory("Label")
add_subdirectory("LinkLabel")
add_subdirectory("ListBox")
add_subdirectory("ListView")
add_subdirectory("MonthCalendar")
add_subdirectory("NotifyIcon")
add_subdirectory("NumericUpDown")
add_subdirectory("PictureBox")
add_subdirectory("PictureBox2")
add_subdirectory("ProgressBar")
add_subdirectory("RadioButton")
add_subdirectory("TextBox")
add_subdirectory("TrackBar")
add_subdirectory("VScrollBar")
