cmake_minimum_required(VERSION 3.2)
project(CommonControls)

add_subdirectory("BitmapButton")
add_subdirectory("Button")
add_subdirectory("CheckBox")
add_subdirectory("CheckListBox")
add_subdirectory("Choice")
add_subdirectory("ComboBox")
add_subdirectory("Control")
add_subdirectory("CommandLinkButton")
add_subdirectory("Gauge")
add_subdirectory("HyperlinkCtrl")
add_subdirectory("ListBox")
add_subdirectory("ListCtrl")
add_subdirectory("RadioButton")
add_subdirectory("RichTextCtrl")
add_subdirectory("RichToolTip")
add_subdirectory("ScrollBar")
add_subdirectory("Slider")
add_subdirectory("StaticBitmap")
add_subdirectory("StaticBitmap2")
add_subdirectory("StaticText")
add_subdirectory("SpinCtrl")
add_subdirectory("SpinCtrlDouble")
add_subdirectory("TaskBarIcon")
add_subdirectory("TextCtrl")
add_subdirectory("ToggleButton")
add_subdirectory("TreeCtrl")
if (APPLE OR MSVC)
  add_subdirectory("WebView")
endif()
