cmake_minimum_required(VERSION 3.2)
project(CommonDialogs)

add_subdirectory(ColourDialog)
add_subdirectory(DirDialog)
add_subdirectory(DirDialogShowWindowModal)
add_subdirectory(FontDialog)
add_subdirectory(OpenFileDialog)
add_subdirectory(OpenFileDialogShowWindowModal)
add_subdirectory(MultiChoiceDialog)
add_subdirectory(NumberEntryDialog)
add_subdirectory(PasswordEntryDialog)
add_subdirectory(RearrangeDialog)
add_subdirectory(SaveFileDialog)
add_subdirectory(SaveFileDialogShowWindowModal)
add_subdirectory(SingleChoiceDialog)
add_subdirectory(SymbolPickerDialog)
add_subdirectory(TextEntryDialog)
