cmake_minimum_required(VERSION 3.2)
project(Components)

if ("${CMAKE_CURRENT_SOURCE_DIR}" STREQUAL "${CMAKE_SOURCE_DIR}")
  find_package(wxWidgets REQUIRED core richtext ribbon aui gl)
  include(${wxWidgets_USE_FILE})
endif ()

add_subdirectory(ArtProvider)
add_subdirectory(BusyCursor)
add_subdirectory(Config)
add_subdirectory(Config2)
add_subdirectory(Cursor)
add_subdirectory(ImageList)
add_subdirectory(Timer)
add_subdirectory(ToolTip)
