cmake_minimum_required(VERSION 3.5)
project(Components)

add_subdirectory(ArtProvider)
add_subdirectory(BusyCursor)
add_subdirectory(Config)
add_subdirectory(Config2)
add_subdirectory(Cursor)
add_subdirectory(ImageList)
add_subdirectory(RichToolTip)
add_subdirectory(Timer)
add_subdirectory(ToolTip)
