cmake_minimum_required(VERSION 3.5)
project(CommonControls)

add_subdirectory(ActivityIndicator)
add_subdirectory(AnimationCtrl)
add_subdirectory(BannerWindow)
add_subdirectory(BitmapButton)
add_subdirectory(Button)
add_subdirectory(CalendarCtrl)
add_subdirectory(CheckBox)
add_subdirectory(CheckListBox)
add_subdirectory(Choice)
add_subdirectory(ComboBox)
add_subdirectory(CommandLinkButton)
add_subdirectory(Control)
add_subdirectory(DirCtrl)
add_subdirectory(FileCtrl)
add_subdirectory(Gauge)
add_subdirectory(GenericStaticBitmap)
add_subdirectory(HyperlinkCtrl)
add_subdirectory(ListBox)
add_subdirectory(ListCtrl)
add_subdirectory(RadioButton)
add_subdirectory(RichTextCtrl)
add_subdirectory(ScrollBar)
add_subdirectory(SearchCtrl)
add_subdirectory(Slider)
add_subdirectory(SpinButton)
add_subdirectory(SpinCtrl)
add_subdirectory(SpinCtrlDouble)
add_subdirectory(StaticBitmap)
add_subdirectory(StaticBitmap2)
add_subdirectory(StaticLine)
add_subdirectory(StaticText)
add_subdirectory(TaskBarIcon)
add_subdirectory(TextCtrl)
add_subdirectory(ToggleButton)
add_subdirectory(TreeCtrl)
if (APPLE OR MSVC)
  add_subdirectory(WebView)
endif()
