cmake_minimum_required(VERSION 3.2)
project(Dialogs)

add_subdirectory(AboutBox)
add_subdirectory(AboutBoxSimple)
add_subdirectory(BusyInfo)
add_subdirectory(FindReplaceDialog)
add_subdirectory(GenericAboutBox)
add_subdirectory(GenericProgressDialog)
add_subdirectory(MessageDialog)
add_subdirectory(MessageDialogShowWindowModal)
add_subdirectory(PrintAbortDialog)
add_subdirectory(ProgressDialog)
add_subdirectory(Wizard)
