cmake_minimum_required(VERSION 3.2)
project(Dialogs)

if ("${CMAKE_CURRENT_SOURCE_DIR}" STREQUAL "${CMAKE_SOURCE_DIR}")
  find_package(wxWidgets REQUIRED core richtext ribbon aui gl)
  include(${wxWidgets_USE_FILE})
endif ()

add_subdirectory(AboutBox)
add_subdirectory(BusyInfo)
add_subdirectory(FindReplaceDialog)
add_subdirectory(GenericAboutBox)
add_subdirectory(GenericFindReplaceDialog)
add_subdirectory(GenericProgressDialog)
add_subdirectory(MessageDialog)
add_subdirectory(PrintAbortDialog)
add_subdirectory(ProgressDialog)
add_subdirectory(Wizard)
