cmake_minimum_required(VERSION 3.5)
project(Dialogs)

add_subdirectory(AboutBox)
add_subdirectory(BusyInfo)
add_subdirectory(ColourDialog)
add_subdirectory(DirDialog)
add_subdirectory(FindReplaceDialog)
add_subdirectory(FontDialog)
add_subdirectory(GenericAboutBox)
add_subdirectory(GenericFindReplaceDialog)
add_subdirectory(GenericProgressDialog)
add_subdirectory(MessageDialog)
add_subdirectory(MultiChoiceDialog)
add_subdirectory(NotificationMessage)
add_subdirectory(NumberEntryDialog)
add_subdirectory(OpenFileDialog)
add_subdirectory(PasswordEntryDialog)
add_subdirectory(ProgressDialog)
add_subdirectory(RearrangeDialog)
add_subdirectory(SaveFileDialog)
add_subdirectory(SingleChoiceDialog)
add_subdirectory(SymbolPickerDialog)
add_subdirectory(TextEntryDialog)
add_subdirectory(Wizard)
