cmake_minimum_required(VERSION 3.2)
project(Events)

if ("${CMAKE_CURRENT_SOURCE_DIR}" STREQUAL "${CMAKE_SOURCE_DIR}")
  find_package(wxWidgets REQUIRED core richtext ribbon aui gl)
  include(${wxWidgets_USE_FILE})
endif ()

add_subdirectory(ApplicationIdle)
add_subdirectory(CustomEvent)
add_subdirectory(FrameAndEvents)
add_subdirectory(FrameClick)
add_subdirectory(FramePaint)
add_subdirectory(KeyEvents)
add_subdirectory(MouseEvents)
add_subdirectory(ProcessEvent)
