cmake_minimum_required(VERSION 3.2)
project(HelloWorld)

if ("${CMAKE_CURRENT_SOURCE_DIR}" STREQUAL "${CMAKE_SOURCE_DIR}")
  find_package(wxWidgets REQUIRED core richtext ribbon aui gl)
  include(${wxWidgets_USE_FILE})
endif ()

add_subdirectory(HelloWorldEmoticons)
add_subdirectory(HelloWorldGenericStaticText)
add_subdirectory(HelloWorldMessageDialog)
add_subdirectory(HelloWorldMessageDialog2)
add_subdirectory(HelloWorldPaint)
add_subdirectory(HelloWorldSay)
add_subdirectory(HelloWorldStaticText)
add_subdirectory(wxWidgetsHelloWorld)
