cmake_minimum_required(VERSION 3.5)
project(HelloWorld)

add_subdirectory(HelloWorldEmoticons)
add_subdirectory(HelloWorldGenericStaticText)
add_subdirectory(HelloWorldMessageDialog)
add_subdirectory(HelloWorldMessageDialog2)
add_subdirectory(HelloWorldPaint)
add_subdirectory(HelloWorldSay)
add_subdirectory(HelloWorldStaticText)
add_subdirectory(wxWidgetsHelloWorld)
