cmake_minimum_required(VERSION 3.2)
project(Others)

add_subdirectory(AutoScroll)
add_subdirectory(BitmapButtonWithLabel)
add_subdirectory(BoxedPanel)
add_subdirectory(ColoredFrames)
#add_subdirectory(Colors)
add_subdirectory(CursorFromFile)
add_subdirectory(DirDialogShowWindowModal)
add_subdirectory(FrameAndThread)
add_subdirectory(FrameAndThreadWithCallAfter)
add_subdirectory(FrameIcon)
add_subdirectory(FrameShow)
add_subdirectory(MdiFrame)
add_subdirectory(MessageDialogShowWindowModal)
add_subdirectory(OpenFileDialogShowWindowModal)
add_subdirectory(SaveFileDialogShowWindowModal)
add_subdirectory(StaticBoxAndCheckBox)
add_subdirectory(StaticBoxAndRadioButton)
add_subdirectory(StaticTextAndUnicode)
add_subdirectory(TextCtrlMultiline)
add_subdirectory(TextEntryDialogAsPassword)
add_subdirectory(TextEntryDialogMultiline)
add_subdirectory(UserDialogShowWindowModal)
