cmake_minimum_required(VERSION 3.20)
project(Events)

add_subdirectory(ApplicationIdle)
add_subdirectory(CustomEvent)
add_subdirectory(EvtHandlerFilterEvent)
add_subdirectory(FrameAndEvents)
add_subdirectory(FrameClick)
add_subdirectory(FramePaint)
add_subdirectory(KeyEvents)
add_subdirectory(MouseEvents)
add_subdirectory(ProcessEvent)
