cmake_minimum_required(VERSION 3.20)
project(Others)

add_subdirectory(AutoScroll)
add_subdirectory(BitmapButtonWithLabel)
add_subdirectory(BorderStyle)
add_subdirectory(BoxedPanel)
add_subdirectory(ColoredFrames)
add_subdirectory(Colors)
add_subdirectory(CursorFromFile)
add_subdirectory(DirDialogShowWindowModal)
add_subdirectory(DisplayInformations)
add_subdirectory(FrameAndThread)
add_subdirectory(FrameAndThreadWithCallAfter)
add_subdirectory(FrameIcon)
add_subdirectory(FrameShow)
add_subdirectory(FrameShowHide)
add_subdirectory(MessageDialogShowWindowModal)
add_subdirectory(OpenFileDialogShowWindowModal)
add_subdirectory(SaveFileDialogShowWindowModal)
add_subdirectory(ShellExecute)
add_subdirectory(StaticBoxAndCheckBox)
add_subdirectory(StaticBoxAndRadioButton)
add_subdirectory(StaticTextAndUnicode)
add_subdirectory(TextCtrlMultiline)
add_subdirectory(TextEntryDialogPassword)
add_subdirectory(TextEntryDialogMultiline)
add_subdirectory(UserDialogShowWindowModal)
