cmake_minimum_required(VERSION 3.0)
project(ApplicationIcon)

find_package(wxWidgets REQUIRED)
include(${wxWidgets_USE_FILE})
link_libraries(${wxWidgets_LIBRARIES})

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.ico ${EXECUTABLE_OUTPUT_PATH}/Resources/Gammasoft.ico COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.ico ${EXECUTABLE_OUTPUT_PATH}/Debug/Resources/Gammasoft.ico COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.ico ${EXECUTABLE_OUTPUT_PATH}/Release/Resources/Gammasoft.ico COPYONLY)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.icns ${EXECUTABLE_OUTPUT_PATH}/Resources/Gammasoft.icns COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.icns ${EXECUTABLE_OUTPUT_PATH}/Debug/Resources/Gammasoft.icns COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.icns ${EXECUTABLE_OUTPUT_PATH}/Release/Resources/Gammasoft.icns COPYONLY)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.png ${EXECUTABLE_OUTPUT_PATH}/Resources/Gammasoft.png COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.png ${EXECUTABLE_OUTPUT_PATH}/Debug/Resources/Gammasoft.png COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.png ${EXECUTABLE_OUTPUT_PATH}/Release/Resources/Gammasoft.png COPYONLY)

if (MSVC)
  set(RESOURCES_FILE ${CMAKE_CURRENT_BINARY_DIR}/resources/${PROJECT_NAME}.rc)
  file(WRITE ${RESOURCES_FILE}
    "#pragma region CMake generated code\n"
    "// This code was generated by CMake script.\n"
    "//\n"
    "// Changes to this file may cause incorrect behavior and will be lost if the code is regenerated.\n"
    "\n"
    "#include <Windows.h>\n"
    "\n"
    "LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL\n"
    "#pragma code_page(65001)\n"
    "\n"
    "${IDI_EXECUTABLE_ICON}"
    "VS_VERSION_INFO VERSIONINFO\n"
    " FILEVERSION ${FILE_VERSION}\n"
    " PRODUCTVERSION ${PRODUCT_VERSION}\n"
    " FILEFLAGSMASK 0x0L\n"
    "#if !defined(NDEBUG)\n"
    " FILEFLAGS VS_FF_DEBUG\n"
    "#endif\n"
    " FILEOS VOS_NT\n"
    " FILETYPE VFT_APP\n"
    " FILESUBTYPE VFT2_UNKNOWN\n"
    "BEGIN\n"
    "  BLOCK \"StringFileInfo\"\n"
    "  BEGIN\n"
    "    BLOCK \"000004b0\"\n"
    "    BEGIN\n"
    "      VALUE \"CompanyName\", \"Gammasoft\"\n"
    "      VALUE \"FileDescription\", \"${PROJECT_NAME} example\"\n"
    "      VALUE \"FileVersion\", \"1,0,0,0\"\n"
    "      VALUE \"InternalName\", \"${PROJECT_NAME}\"\n"
    "      VALUE \"LegalCopyright\", \"\"\n"
    "      VALUE \"LegalTrademarks1\", \"\"\n"
    "      VALUE \"LegalTrademarks2\", \"\"\n"
    "      VALUE \"OriginalFilename\", \"${PROJECT_NAME}.exe\"\n"
    "      VALUE \"ProductName\", \"\"\n"
    "      VALUE \"ProductVersion\", \"1,0,0,0\"\n"
    "    END\n"
    "  END\n"
    "  BLOCK \"VarFileInfo\"\n"
    "  BEGIN\n"
    "    VALUE \"Translation\", 0x0, 1200\n"
    "  END\n"
    "END\n"
    "#pragma endregion\n"
  )
elseif (APPLE)
  set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.ico PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
  set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.icns PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
  set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.png PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
  set(MACOSX_BUNDLE_ICON_FILE "Gammasoft.icns")
elseif (UNIX)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(${PROJECT_NAME} WIN32 MACOSX_BUNDLE ApplicationIcon.cpp ${RESOURCES_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.ico ${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.icns ${CMAKE_CURRENT_SOURCE_DIR}/Resources/Gammasoft.png)
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Application")
